--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,2 +1,26 @@
+.dialogs {
+    display: grid;
+    grid-template-columns: 2fr 2fr 8fr;
+    padding: 20px;
+}
 
 
+.ava {
+    
+}
+.dialogItem {
+   
+}
+.dialogItem .active {
+    color: blueviolet;
+}
+.dialog {
+
+}
+
+.masseges {
+    
+}
+.massege {
+
+}
